// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReviewPatchSet.js Should display all Patch Template configuration 1`] = `
<DocumentFragment>
  <div
    class="pf-v5-l-stack pf-m-gutter"
  >
    <div
      class="pf-v5-l-stack__item"
    >
      <div
        class="pf-v5-c-content"
      >
        <h2
          class=""
          data-ouia-component-id="OUIA-Generated-Text-1"
          data-ouia-component-type="PF5/Text"
          data-ouia-safe="true"
          data-pf-content="true"
        >
          Review 
        </h2>
      </div>
    </div>
    <div
      class="pf-v5-l-stack__item"
    >
      <div
        class="pf-v5-c-content"
        style="margin-top: -15px;"
      >
        <p
          class=""
          data-ouia-component-id="OUIA-Generated-Text-2"
          data-ouia-component-type="PF5/Text"
          data-ouia-safe="true"
          data-pf-content="true"
        >
          Review the details of your template.
        </p>
      </div>
    </div>
    <div
      class="pf-v5-l-stack__item"
    >
      <div
        class="pf-v5-c-content"
      >
        <h2
          class="pf-v5-u-mt-md pf-v5-u-mb-sm"
          data-ouia-component-id="OUIA-Generated-Text-3"
          data-ouia-component-type="PF5/Text"
          data-ouia-safe="true"
          data-pf-content="true"
        >
          Content
        </h2>
        <dl
          class=""
        >
          <dt
            class=""
            style="min-width: 220px;"
          >
            Red Hat advisories up to date
          </dt>
          <dd
            class=""
          >
            14 June 2022
          </dd>
        </dl>
      </div>
    </div>
    <div
      class="pf-v5-l-stack__item"
    >
      <div
        class="pf-v5-c-content"
      >
        <h2
          class="pf-v5-u-mt-md pf-v5-u-mb-sm"
          data-ouia-component-id="OUIA-Generated-Text-4"
          data-ouia-component-type="PF5/Text"
          data-ouia-safe="true"
          data-pf-content="true"
        >
          Details
        </h2>
        <dl
          class=""
        >
          <dt
            class=""
            style="min-width: 220px;"
          >
            Name
          </dt>
          <dd
            class=""
          >
            test-name
          </dd>
          <dt
            class=""
            style="min-width: 220px;"
          >
            Description
          </dt>
          <dd
            class=""
          >
            test-description
          </dd>
        </dl>
      </div>
    </div>
    <div
      class="pf-v5-l-stack__item"
    >
      <div
        class="pf-v5-c-content"
      >
        <h2
          class="pf-v5-u-mt-md pf-v5-u-mb-sm"
          data-ouia-component-id="OUIA-Generated-Text-5"
          data-ouia-component-type="PF5/Text"
          data-ouia-safe="true"
          data-pf-content="true"
        >
          Systems
        </h2>
        <dl
          class=""
        >
          <dt
            class=""
            style="min-width: 220px;"
          >
            Template applied to
          </dt>
          <dd
            class=""
          >
             2 systems 
          </dd>
        </dl>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ReviewPatchSet.js Should display available configuration fields only 1`] = `
<DocumentFragment>
  <div
    class="pf-v5-l-stack pf-m-gutter"
  >
    <div
      class="pf-v5-l-stack__item"
    >
      <div
        class="pf-v5-c-content"
      >
        <h2
          class=""
          data-ouia-component-id="OUIA-Generated-Text-6"
          data-ouia-component-type="PF5/Text"
          data-ouia-safe="true"
          data-pf-content="true"
        >
          Review 
        </h2>
      </div>
    </div>
    <div
      class="pf-v5-l-stack__item"
    >
      <div
        class="pf-v5-c-content"
        style="margin-top: -15px;"
      >
        <p
          class=""
          data-ouia-component-id="OUIA-Generated-Text-7"
          data-ouia-component-type="PF5/Text"
          data-ouia-safe="true"
          data-pf-content="true"
        >
          Review the details of your template.
        </p>
      </div>
    </div>
    <div
      class="pf-v5-l-stack__item"
    >
      <div
        class="pf-v5-c-content"
      >
        <h2
          class="pf-v5-u-mt-md pf-v5-u-mb-sm"
          data-ouia-component-id="OUIA-Generated-Text-8"
          data-ouia-component-type="PF5/Text"
          data-ouia-safe="true"
          data-pf-content="true"
        >
          Content
        </h2>
        <dl
          class=""
        >
          <dt
            class=""
            style="min-width: 220px;"
          >
            Red Hat advisories up to date
          </dt>
          <dd
            class=""
          >
            N/A
          </dd>
        </dl>
      </div>
    </div>
    <div
      class="pf-v5-l-stack__item"
    >
      <div
        class="pf-v5-c-content"
      >
        <h2
          class="pf-v5-u-mt-md pf-v5-u-mb-sm"
          data-ouia-component-id="OUIA-Generated-Text-9"
          data-ouia-component-type="PF5/Text"
          data-ouia-safe="true"
          data-pf-content="true"
        >
          Details
        </h2>
        <dl
          class=""
        >
          <dt
            class=""
            style="min-width: 220px;"
          >
            Name
          </dt>
          <dd
            class=""
          >
            test-name
          </dd>
          <dt
            class=""
            style="min-width: 220px;"
          >
            Description
          </dt>
          <dd
            class=""
          >
            No description provided
          </dd>
        </dl>
      </div>
    </div>
    <div
      class="pf-v5-l-stack__item"
    >
      <div
        class="pf-v5-c-content"
      >
        <h2
          class="pf-v5-u-mt-md pf-v5-u-mb-sm"
          data-ouia-component-id="OUIA-Generated-Text-10"
          data-ouia-component-type="PF5/Text"
          data-ouia-safe="true"
          data-pf-content="true"
        >
          Systems
        </h2>
        <dl
          class=""
        >
          <dt
            class=""
            style="min-width: 220px;"
          >
            Template applied to
          </dt>
          <dd
            class=""
          >
             2 systems 
          </dd>
        </dl>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
